--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@contentful/rich-text-types": "^15.11.1",
+    "dotenv": "^16.0.0",
     "gatsby": "^4.7.1",
     "gatsby-plugin-gatsby-cloud": "^4.7.0",
-    "gatsby-plugin-image": "^2.7.0",
+    "gatsby-plugin-image": "^2.8.1",
     "gatsby-plugin-manifest": "^4.7.0",
     "gatsby-plugin-offline": "^5.7.0",
     "gatsby-plugin-react-helmet": "^5.7.0",
-    "gatsby-plugin-sharp": "^4.7.0",
+    "gatsby-plugin-sharp": "^4.8.1",
+    "gatsby-source-contentful": "^7.5.0",
     "gatsby-source-filesystem": "^4.7.0",
-    "gatsby-transformer-sharp": "^4.7.0",
+    "gatsby-transformer-sharp": "^4.8.0",
     "prop-types": "^15.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
