--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@contentful/rich-text-types": "^15.11.1",
     "dotenv": "^16.0.0",
+    "framer-motion": "2.9.5",
     "gatsby": "^4.7.1",
     "gatsby-plugin-gatsby-cloud": "^4.7.0",
     "gatsby-plugin-image": "^2.8.1",
