--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@contentful/rich-text-types": "^15.11.1",
     "dotenv": "^16.0.0",
+    "framer-motion": "^6.5.1",
     "gatsby": "^4.7.1",
     "gatsby-plugin-gatsby-cloud": "^4.7.0",
     "gatsby-plugin-image": "^2.8.1",
@@ -21,7 +22,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "styled-components": "^4.2.1"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "prettier": "^2.5.1"
